@@ -1,3 +1,5 @@
+2006/7/9 -- released version 20060709_trunk
+
 2006/7/8 -- released version 20060708_trunk
 
 * fix loss_color description -- tobi
